--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
-        android:text="Daftar Orang Hilang"
+        android:text="Kelola Orang Hilang"
         android:textColor="@color/black"
         android:textFontWeight="900"
         android:textSize="30sp"
