--- a/app/src/main/res/layout/activity_detail_orang_hilang.xml
+++ b/app/src/main/res/layout/activity_detail_orang_hilang.xml
@@ -133,6 +133,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_text_sering_ditemukan" />
 
+    <EditText
+        android:id="@+id/et_lokasi"
+        style="@style/TextAppearance.Material3.BodyMedium"
+        android:layout_width="332dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="15dp"
+        android:hint="Lokasi"
+        android:importantForAutofill="no"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        android:clickable="false"
+        app:layout_constraintTop_toBottomOf="@+id/tv_text_lokasi_terakhir" />
+
     <TextView
         android:id="@+id/tv_text_ciri_fisik"
         style="@style/TextAppearance.AppCompat.Title"
