--- a/app/src/main/res/layout/activity_tambah_orang_hilang.xml
+++ b/app/src/main/res/layout/activity_tambah_orang_hilang.xml
@@ -22,35 +22,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/status_ditemukan" />
-
-        <RadioButton
-            android:id="@+id/status_ditemukan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Ditemukan"
-            android:textColor="@color/primarycolor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.739"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_status"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintTop_toBottomOf="@+id/statusRadioGroup" />
 
         <Button
             android:id="@+id/btn_camera"
-            android:layout_width="118dp"
-            android:layout_height="39dp"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/primarycolor"
-            android:text="Foto"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.74"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_foto" />
-
-        <Button
-            android:id="@+id/btn_camera2"
             android:layout_width="118dp"
             android:layout_height="39dp"
             android:layout_marginTop="16dp"
@@ -106,8 +81,8 @@
             style="@style/TextAppearance.Material3.BodyMedium"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:hint="Umur"
-            android:inputType="text"
+            android:hint="Nomor Pemerintah"
+            android:inputType="number"
             android:textCursorDrawable="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +95,6 @@
             style="@style/TextAppearance.Material3.BodyLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
             android:layout_marginTop="12dp"
             android:paddingStart="3dp"
             android:text="Tempat Sering Terlihat"
@@ -128,7 +102,7 @@
             android:textFontWeight="900"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/et_tempat_sering_terlihat"
             app:layout_constraintTop_toBottomOf="@+id/et_terakhir_terlihat" />
 
         <EditText
@@ -136,7 +110,7 @@
         style="@style/TextAppearance.Material3.BodyMedium"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="Umur"
+        android:hint="Tempat Sering Terlihat"
         android:inputType="text"
         android:textCursorDrawable="@color/black"
         android:textSize="16sp"
@@ -150,13 +124,14 @@
             style="@style/TextAppearance.Material3.BodyLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:paddingStart="3dp"
             android:text="Jenis Kelamin"
             android:textColor="@color/primarycolor"
             android:textFontWeight="900"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/genderL"
+            app:layout_constraintStart_toStartOf="@+id/et_ciri_fisik"
             app:layout_constraintTop_toBottomOf="@+id/et_ciri_fisik" />
 
         <TextView
@@ -181,7 +156,7 @@
             style="@style/TextAppearance.Material3.BodyMedium"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:hint="Umur"
+            android:hint="Terakhir Terlihat"
             android:inputType="text"
             android:textCursorDrawable="@color/black"
             android:textSize="16sp"
@@ -203,7 +178,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/et_terakhir_terlihat"
-        app:layout_constraintTop_toBottomOf="@+id/genderL" />
+        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />
 
         <EditText
             android:id="@+id/et_nama"
@@ -258,7 +233,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-11dp"
         android:hint="Umur"
-        android:inputType="text"
+        android:inputType="number"
         android:textCursorDrawable="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -291,6 +266,7 @@
         android:layout_height="91dp"
         android:layout_marginTop="-11dp"
         android:ems="10"
+        android:hint="Ciri Fisik"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
@@ -313,54 +289,81 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_umur" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="tv_nama,et_nama,tv_umur,et_umur" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="tv_nama,et_nama,tv_umur,et_umur" />
-
-        <RadioButton
-        android:id="@+id/genderL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Laki-Laki"
-        android:textColor="@color/primarycolor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.247"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_jenis_kelamin"
-        tools:ignore="MissingConstraints" />
-
-        <RadioButton
-            android:id="@+id/status_hilang"
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Hilang"
-            android:textColor="@color/primarycolor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.235"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_status"
-            tools:ignore="MissingConstraints" />
+            app:constraint_referenced_ids="tv_nama,et_nama,tv_umur,et_umur" />
 
-        <RadioButton
-        android:id="@+id/genderP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Perempuan"
-        android:textColor="@color/primarycolor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.739"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_jenis_kelamin"
-        tools:ignore="MissingConstraints" />
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="tv_nama,et_nama,tv_umur,et_umur" />
+
+
+        <RadioGroup
+            android:id="@+id/genderRadioGroup"
+            android:layout_width="247dp"
+            android:layout_height="31dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_jenis_kelamin">
+
+            <RadioButton
+                android:id="@+id/genderL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Laki-Laki"
+                android:textColor="@color/primarycolor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.247"
+
+                tools:ignore="MissingConstraints" />
+
+            <RadioButton
+                android:id="@+id/genderP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Perempuan"
+                android:textColor="@color/primarycolor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.739"
+                tools:ignore="MissingConstraints" />
+        </RadioGroup>
+
+
+        <RadioGroup
+            android:id="@+id/statusRadioGroup"
+            android:layout_width="256dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/tv_status"
+            app:layout_constraintTop_toBottomOf="@+id/tv_status">
+
+            <RadioButton
+                android:id="@+id/status_ditemukan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ditemukan"
+                android:textColor="@color/primarycolor"
+                tools:ignore="MissingConstraints" />
+
+            <RadioButton
+                android:id="@+id/status_hilang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hilang"
+                android:textColor="@color/primarycolor"
+                tools:ignore="MissingConstraints" />
+        </RadioGroup>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
