--- a/app/src/main/res/layout/fragment_search_user.xml
+++ b/app/src/main/res/layout/fragment_search_user.xml
@@ -45,7 +45,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/josefin_sans"
             android:text="@string/cari_orang_hilang"
-            android:textColor="@color/black"
+            android:textColor="@color/primarycolor"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -59,7 +59,7 @@
         android:layout_marginTop="25dp"
         android:fontFamily="@font/inter_extrabold"
         android:text="@string/nama_orang"
-        android:textColor="@color/black"
+        android:textColor="@color/primarycolor"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/container_menu" />
@@ -79,6 +79,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_src_name"
             android:layout_width="match_parent"
+            style="@style/TextAppearance.Material3.BodyMedium"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
@@ -102,6 +103,7 @@
 
         <AutoCompleteTextView
             android:id="@+id/gender_choice"
+            style="@style/TextAppearance.Material3.BodyMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -127,6 +129,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_src_location"
+            style="@style/TextAppearance.Material3.BodyMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -140,14 +143,16 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_search_user"
+
+
         android:layout_width="99dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:elevation="10dp"
         android:text="@string/search"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="12sp"
-        app:backgroundTint="@color/button"
+        app:backgroundTint="#00BCD4"
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,14 +162,13 @@
         android:id="@+id/tv_text_hasil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/container_rv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search_user"
-        android:layout_marginBottom="10dp"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/btn_search_user">
 
         <TextView
             android:id="@+id/tv_hasil"
@@ -172,7 +176,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_extrabold"
             android:text="@string/hasil"
-            android:textColor="@color/black"
+            android:textColor="@color/primarycolor"
             android:textSize="20sp" />
 
         <TextView
@@ -181,8 +185,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/josefin_sans"
-            android:textColor="@color/black"
             android:text="People Found : xxx"
+            android:textColor="@color/primarycolor"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -220,7 +224,7 @@
             android:lines="2"
             android:text="@string/data_tidak_ditemukan"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/primarycolor"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
