--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <!--  Color Pattern  -->
-    <color name="primarycolor">#F8A90F</color>
+    <color name="primarycolor">#FF9800</color>
     <color name="primary_background">#F8A90F</color>
     <color name="card_color">#FFD465</color>
     <color name="unselected_circle">#B6BDE8</color>
