--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/tv_nama_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/inter_extrabold"
+                android:fontFamily="@font/josefin_sans"
                 android:maxLines="1"
                 android:text="@string/nama"
                 android:textColor="@color/black"
@@ -113,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:fontFamily="@font/inter_extrabold"
+                    android:fontFamily="@font/josefin_sans"
                     android:text="@string/status"
                     android:textStyle="bold" />
 
@@ -129,7 +129,6 @@
                 android:text="@string/lokasi_terakhir"
                 android:textColor="@color/black"
                 android:textSize="30sp"
-                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/container_status" />
 
@@ -184,7 +183,6 @@
                 android:text="@string/sering_ditemukan"
                 android:textColor="@color/black"
                 android:textSize="30sp"
-                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/container_lokasi_terakhir" />
 
@@ -224,7 +222,6 @@
                 android:text="@string/ciri_fisik"
                 android:textColor="@color/black"
                 android:textSize="30sp"
-                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/container_user_Sering_ditemukan" />
 
@@ -266,7 +263,6 @@
                 android:text="@string/jika_mencari_orang_ini_hubungi"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
