--- a/app/src/main/res/drawable/container_card_note_foto.xml
+++ b/app/src/main/res/drawable/container_card_note_foto.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="8dp" android:right="8dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/card_color"/>
+            <solid android:color="@color/primaryText"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/black"
