--- a/app/src/main/res/layout/activity_foto.xml
+++ b/app/src/main/res/layout/activity_foto.xml
@@ -33,7 +33,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/josefin_sans"
             android:text="@string/cari_orang_hilang"
-            android:textColor="@color/primarycolor"
+            android:textColor="@color/primaryText"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
         android:textStyle="bold"
         android:text="@string/cari_orang"
         android:textAlignment="center"
-        android:textColor="@color/primarycolor"
+        android:textColor="@color/primaryText"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,8 +87,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@string/mathcing"
-                    android:src="@drawable/baseline_person_24"
-                    app:tint="@color/black" />
+                    android:src="@drawable/baseline_person_24" />
 
             </LinearLayout>
 
@@ -140,7 +139,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                app:backgroundTint="@color/primarycolor"
+                app:backgroundTint="@color/primaryText"
                 app:cornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +168,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/note"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="14sp" />
 
         <TextView
@@ -185,7 +184,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/isi_example_pencarian_orang"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             />
